--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -6,6 +6,9 @@
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
 
   &__content {
     @include absCenter;
@@ -15,6 +18,11 @@
     border-radius: 0.3rem;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    // We have to restate the transform from elsewhere (absCenter mixin in this case
+    // because transforms must be defined in one line.
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s; // delay of 0.2s
   }
 
   /* Using paren display: table and child display: table-cell we can 
@@ -53,6 +61,39 @@
     -webkit-hyphens: auto;
     hyphens: auto;
   }
+
+  /* The :target pseudo-class applies to the element when the current url (window.location.href)
+   has the element anchor id as target. e.g. http://www.mysite.com/#popup */
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  // When the element becomes the target, we style the content as follows:
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all 0.2s;
+      line-height: 1;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
+  }
+
   /*
   position: fixed;
   top: 0;
