--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -30,6 +30,13 @@
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: table;
+      width: 100%;
+      vertical-align: bottom;
+      transform: translateY(-1rem);
+    }
   }
 
   &__right {
@@ -37,11 +44,21 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-port) {
+      display: inline-block;
+      width: 50%;
+    }
   }
 
   &__text {
